[workspace]
resolver = "2"
members = [
    "core",
    "nomt",
    "fuzz",
    "torture",
    "examples/*",
    "trickfs",
    "trickfs/trickmnt",
]
exclude = ["benchtop"]

[workspace.package]
authors = ["thrum"]
homepage = "https://thrum.dev"
repository = "https://github.com/thrumdev/nomt"
edition = "2021"
license = "MIT/Apache-2.0"

[workspace.dependencies]
borsh = { version = "1", default-features = false, features = ["derive"] }

[profile.release]
debug = 1
debug-assertions = true
