[workspace]
resolver = "2"
members = [
    "core",
    "nomt",
    "fuzz",
    "torture",
    "examples/*",
    "trickfs",
    "trickfs/trickmnt",
]
exclude = ["benchtop"]

[workspace.package]
authors = ["thrum"]
homepage = "https://thrum.dev"
repository = "https://github.com/thrumdev/nomt"
edition = "2021"
license = "MIT/Apache-2.0"

[workspace.dependencies]
borsh = { version = "1.5.7", default-features = false, features = ["derive"] }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ruint = { version = "1.12.1", default-features = false }
arrayvec = { version = "0.7", default-features = false }
blake3 = { version = "1.5.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
anyhow = { version = "1.0.81", features = ["backtrace"] }
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }
threadpool = "1.8.1"
twox-hash = "2.1.0"
fxhash = "0.2.1"
dashmap = "5.5.3"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
slab = "0.4.9"
rand = "0.8.5"
ahash = "0.8.11"
imbl = "3.0.0"
lru = "0.12.3"
libc = "0.2.155"
criterion = { version = "0.3" }
thread_local = "1.1.8"
cfg-if = "1.0.0"
io-uring = "0.6.4"
loom = { version = "0.7", features = ["checkpoint"] }
rand_pcg = "0.3.1"
hex-literal = "0.4"
tempfile = "3.8.1"
lazy_static = "1.5.0"
quickcheck = "1.0.3"
nix = { version = "0.29", features = ["process"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = "0.3.31"
clap = { version = "4.5.23", features = ["derive"] }
which = "4"
fuser = { version = "0.15.1", features = ["abi-7-23"] }
log = "0.4.22"
rand_distr = "0.4.3"
env_logger = "0.11.6"

[profile.release]
debug = 1
debug-assertions = true
