[package]
name = "benchtop"
version = "0.1.0"
authors = ["thrum"]
homepage = "https://thrum.dev"
repository = "https://github.com/thrumdev/nomt"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]

# benchmarking
clap = { version = "4.4.8" , features = ["derive"] }
anyhow = { version = "1.0.75" }
hdrhistogram = "7.5.4"
fxhash = "0.2.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
sha2 = { version = "0.10.6" }
ruint = { version = "1.12.1" }
toml = "0.8.12"
serde = "1.0.199"
humantime = "2.1.0"

# sov-db
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk" }
sov-schema-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk" }
sov-prover-storage-manager = { git = "https://github.com/Sovereign-Labs/sovereign-sdk" }
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }

# sp-trie
sp-trie = "32.0.0"
sp-state-machine = "0.35.0"
trie-db = "0.28.0"
hash-db = "0.16.0"
sp-core = "31.0.0"
kvdb = "0.13.0"
kvdb-rocksdb = "0.19.0"
array-bytes = "6.1"

# nomt
nomt = { path = "../nomt" }

[profile.release]
debug = true
