[package]
name = "bitbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.6.4"
crossbeam-channel = "0.5.13"
slab = "0.4.9"
libc = "0.2.155"
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.86"
blake3 = "1.5.1"
ahash = "0.8.11"
bitvec = "1.0.1"
im = "15.1.0"
itertools = "0.13.0"

[profile.release]
debug = true
