[package]
name = "nomt-core"
description = "Core trie operations for NOMT"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ruint = { version = "1.12.1", default-features = false }
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
blake3 = "1.5.1"

[features]
default = ["std"]
std = ["bitvec/std"]
