[package]
name = "nomt-core"
description = "Core trie operations for NOMT"
version = "1.0.0-preview"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ruint = { version = "1.12.1", default-features = false }
arrayvec = { version = "0.7", default-features = false }
borsh = { version = ">1.4", default-features = false, features = ["derive"], optional = true }
blake3 = { version = "1.5.1", default-features = false, optional = true }
sha2 = { version = "0.10.6", default-features = false, optional = true }

[dev-dependencies]
blake3 = "1.5.1"

[features]
default = ["std", "blake3-hasher", "sha2-hasher"]
std = ["bitvec/std", "borsh/std"]
borsh = ["dep:borsh"]
blake3-hasher = ["dep:blake3"]
sha2-hasher = ["dep:sha2"]
