[package]
name = "nomt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3.1", features = ["derive"] }
tempfile = "3.10.1"

[dependencies.nomt]
path = "../nomt"

[[bin]]
name = "api_surface"
path = "fuzz_targets/api_surface.rs"
test = false
doc = false
bench = false
