[package]
name = "nomt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3.1", features = ["derive"] }
tempfile = "3.10.1"
bitvec = { version = "1" }

[dependencies.nomt]
path = "../nomt"
features = ["fuzz"]

[[bin]]
name = "api_surface"
path = "fuzz_targets/api_surface.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitwise_memcpy"
path = "fuzz_targets/bitwise_memcpy.rs"
test = false
doc = false
bench = false
