[package]
name = "nomt"
description = "Nearly Optimal Merkle Trie - Schema and Database"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
nomt-core = { path = "../core", features = ["std"] }
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }
threadpool = "1.8.1"
bitvec = { version = "1" }
blake3 = "1.5.1"
fxhash = "0.2.1"
dashmap = "5.5.3"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
slab = "0.4.9"
rand = "0.8.5"
ahash = "0.8.11"
im = "15.1.0"
lru = "0.12.3"
libc = "0.2.155"
criterion = { version = "0.3", optional = true }
thread_local = "1.1.8"

[target.'cfg(target_os="linux")'.dependencies]
io-uring = "0.6.4"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
rand_pcg = "0.3.1"
hex-literal = "0.4"
tempfile = "3.8.1"
criterion = "0.3"
lazy_static = "1.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "beatree"
harness = false

[features]
benchmarks = ["dep:criterion"]
