[package]
name = "nomt"
description = "Nearly Optimal Merkle Trie - Schema and Database"
version = "1.0.0-preview"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
nomt-core = { path = "../core", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }
threadpool = "1.8.1"
bitvec = { version = "1" }
twox-hash = "2.1.0"
fxhash = "0.2.1"
dashmap = "5.5.3"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
slab = "0.4.9"
rand = "0.8.5"
ahash = "0.8.11"
imbl = "3.0.0"
lru = "0.12.3"
libc = "0.2.155"
criterion = { version = "0.3", optional = true }
thread_local = "1.1.8"
cfg-if = "1.0.0"
borsh = { version = "1", default-features = false, features = ["derive"], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
io-uring = "0.6.4"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
rand_pcg = "0.3.1"
hex-literal = "0.4"
tempfile = "3.8.1"
criterion = "0.3"
lazy_static = "1.5.0"
hex = "0.4.3"
quickcheck = "1.0.3"
blake3 = "1.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "beatree"
harness = false

[features]
default = ["blake3-hasher", "sha2-hasher"]
benchmarks = ["dep:criterion"]
fuzz = []
borsh = ["dep:borsh", "nomt-core/borsh"]
blake3-hasher = ["nomt-core/blake3-hasher"]
sha2-hasher = ["nomt-core/sha2-hasher"]
