[package]
name = "orture"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = "0.26.2"
libc = "0.2.147"
anyhow = "1.0.72"
cfg-if = "1.0.0"
serde = { version = "1.0.216", features = ["derive"] }
bincode = "1.3.3"
nomt = { path = "../nomt" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tempfile = "3.10"

[[bin]]
name = "orture"
path = "src/main.rs"
