[package]
name = "torture"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29", features = ["process"] }
libc = "0.2.147"
anyhow = "1.0.72"
cfg-if = "1.0.0"
serde = { version = "1.0.216", features = ["derive"] }
bincode = "1.3.3"
nomt = { path = "../nomt" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tempfile = "3.10"
rand = "0.8.5"
rand_pcg = "0.3.1"
imbl = "3.0.0"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hex = "0.4.3"
futures-util = "0.3.31"
clap = { version = "4.5.23", features = ["derive"] }

