[package]
name = "trickfs"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fuser = { version = "0.15.1", features = ["abi-7-23"] }
libc = "0.2.169"
log = "0.4.22"
tempfile = "3.15.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"

[dev-dependencies]
env_logger = "0.11.6"
